fix(checkbox): Update disabled states for better accessibility (#3178)
* fix(checkbox): Update disabled states for better readability

* fix(radio) Update disabled states for better readability.

* fix(checkbox, radio) Update tokens

Use generic palette tokens to avoid semantic conflicts.

--- a/packages/design-system/ui/components/checkbox/base/_index.scss
+++ b/packages/design-system/ui/components/checkbox/base/_index.scss
@@ -146,7 +146,7 @@
         border-color: $color-border-input-disabled;
 
         &:after {
-          border-color: $color-background-input;
+          border-color: $color-gray-9;
         }
       }
     }
