--- a/packages/design-system/ui/components/checkbox-button-group/base/_index.scss
+++ b/packages/design-system/ui/components/checkbox-button-group/base/_index.scss
@@ -152,8 +152,8 @@
     &[disabled]:checked ~ .slds-checkbox--faux,
     &[disabled]:checked + .slds-checkbox_button__label,
     &[disabled]:checked + .slds-checkbox--button__label {
-      background-color: $color-background-button-default-disabled;
-      color: $color-text-button-default-disabled;
+      background-color: $brand-disabled;
+      color: $color-text-button-brand-disabled;
       cursor: default;
     }
   }
