feat(spacing): Add variable spacing utility classes (#3235)
* feat(spacing): Add variable spacing utility classes

* Fix linting

* Linting

--- a/packages/design-system/ui/utilities/margin/_doc.scss
+++ b/packages/design-system/ui/utilities/margin/_doc.scss
@@ -15,6 +15,6 @@
  *
  * @utility
  * @name margin
- * @selector [class*='slds-m-']
+ * @selector [class*='slds-m-'], [class*='slds-var-m-']
  * @support dev-ready
  */
