--- a/packages/design-system/ui/utilities/padding/_doc.scss
+++ b/packages/design-system/ui/utilities/padding/_doc.scss
@@ -15,6 +15,6 @@
  *
  * @utility
  * @name padding
- * @selector [class*='slds-p-']
+ * @selector [class*='slds-p-'], [class*='slds-var-p-']
  * @support dev-ready
  */
