fix(app launcher): Fix the tile markup for better accessibility (#3234)
* fix(app laucher): tile markup for better accessibilty

* chore(button icon): Create a named export of a stateful button icon

* fix(app launcher): Add a test for tile tooltips

* fix(app launcher): Update the tooltip prop

* fix(app launcher): fix some documentation typos

* fix(app launcher): missing typo

--- a/packages/design-system/ui/components/app-launcher/base/_index.scss
+++ b/packages/design-system/ui/components/app-launcher/base/_index.scss
@@ -36,7 +36,7 @@
   /**
    * @summary Tile cards that contains the app information, the icon and description
    * @selector .slds-app-launcher__tile
-   * @restrict .slds-app-launcher a
+   * @restrict .slds-app-launcher div
    */
   &__tile {
     display: flex;
